# cry

./: .gitignore  README.md  __init__.py  binary.py  env.py  matrix.py  pyproject.toml  run_tests.sh  sagestuff.py  spaces.py  test_py.sh  test_sage.sh  tox.ini  utils.py
cry/: __init__.py  env.py  matrix.py  perm.py  plots.py  sagestuff.py
cry/eq/: __init__.py  affine.py  interpolator.py  lattice.py
cry/fields/: __init__.py  basis_change.py
cry/py/: env.py
cry/py/anf/: symbolic.py
cry/py/containers/: vector.py
cry/py/tree/: anf.py
cry/py/tree/node/: __init__.py  node.py  optbitnode.py
cry/py/utils/: __init__.py  cache.py
cry/rsa/: rsa.py
cry/sbox2/: Makefile  ddt  ddt_fast.cpp  sbox2.py  tables.py
cry/sbox2/algorithms/: multiset.py
cry/sbox2/equiv/: __init__.py  linear.py  linear_generic.py  test.py
cry/sbox2/generators/: __init__.py  feistel.py  linear.py  simple.py
cry/utils/: __init__.py  cache.py
eq/: affine.py
fields/: __init__.py
py/: binary.py  env.py
py/anf/: __init__.py  mobius.py  symbolic.py
py/tree/: anf.py  orderer.py
py/tree/node/: bitnode.py  node.py  op.py
py/utils/: __init__.py  cache.py
sbox2/: __init__.py  base.py  compose.py  cycles.py  degrees.py  inversion.py  main.py  properties.py  repr.py  sbox.py  sbox2.py  tables.py  transform.py
sbox2/algorithms/: multiset.py
sbox2/equiv/: __init__.py  linear.py  linear_generic.py  test.py
sbox2/generators/: feistel.py  linear.py  registry.py  simple.py
tests_sage/: test_lattice.py  test_rsa.py  test_sbox2.py
utils/: __init__.py  cache.py
